--- a/NuGet.config
+++ b/NuGet.config
@@ -4,6 +4,7 @@
     <!-- only use the feeds below -->
     <clear/>
     <add key="AspNetCore" value="https://dotnet.myget.org/F/aspnetcore-master/api/v3/index.json" />
+    <add key="aspnet-contrib" value="https://www.myget.org/F/aspnet-contrib/api/v3/index.json" />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
