--- a/src/Orchard.Cms.Web/project.json
+++ b/src/Orchard.Cms.Web/project.json
@@ -15,6 +15,9 @@
     "Orchard.DisplayManagement": "2.0.0-*",
     "Orchard.Hosting.Console": "2.0.0-*",
     "Orchard.Recipes.Abstractions": "2.0.0-*",
+    "System.Linq": "4.1.0-*",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
+    "Microsoft.AspNetCore.DataProtection.Extensions": "1.0.0"
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.1",
