--- a/src/Orchard.Cms.Web/project.json
+++ b/src/Orchard.Cms.Web/project.json
@@ -19,7 +19,9 @@
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.1",
     "System.Dynamic.Runtime": "4.0.11",
-    "Microsoft.Extensions.Localization.Abstractions": "1.0.0"
+    "Microsoft.Extensions.Localization.Abstractions": "1.0.0",
+    "DasMulli.Win32.ServiceUtils": "1.0.1",
+    "Microsoft.Extensions.Configuration.CommandLine": "1.0.0"
   },
   "runtimeOptions": {
     "configProperties": {
